beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: beat
  name: beat
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: beat
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/new-76prolubepluscom-default: "true"
        io.kompose.service: beat
    spec:
      containers:
        - args:
            - celery
            - -A
            - automanshop
            - beat
            - --loglevel=info
          image: beat
          name: beat
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: beat-claim0
      restartPolicy: Always
      volumes:
        - name: beat-claim0
          persistentVolumeClaim:
            claimName: beat-claim0
status: {}
