celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - image: holleratme420/web:v1
          args:
            - celery
            - -A
            - automanshop
            - beat
            - --loglevel=info
          name: celery
          resources: {}
          # volumeMounts:
          #   - mountPath: /app
          #     name: celery-claim0
      restartPolicy: Always
  
      # volumes:
      #   - name: celery-claim0
      #     # persistentVolumeClaim:
          #   claimName: celery-claim0
status: {}
