sqldb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sqldb
  name: sqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sqldb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/new-76prolubepluscom-default: "true"
        io.kompose.service: sqldb
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: DB_APP_USER_PASSWORD
            - name: DB_APP_USR
            - name: MSSQL_SA_PASSWORD
          image: mcr.microsoft.com/azure-sql-edge
          name: sqldb
          ports:
            - containerPort: 1433
              hostPort: 1433
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
